fixed alignment issue for comment summary

--- a/UI/src/app/dashboard/filter/filter.component.css
+++ b/UI/src/app/dashboard/filter/filter.component.css
@@ -1095,7 +1095,7 @@ ul li.selectedfilter .selected-node-label .align-list-marker {
   box-shadow: 0px 1px 10px #00000045;
   z-index: 2000;
   border-radius: 5px;
-  left: -50px;
+  left: -120px;
 }
 .commentSummaryDdn:before{
   content: '';
@@ -1105,7 +1105,7 @@ ul li.selectedfilter .selected-node-label .align-list-marker {
   border-right: 10px solid transparent;
   border-bottom: 12px solid #fff;
   position: absolute;
-  left: 65px;
+  left: 135px;
   -webkit-filter: drop-shadow(0px -2px 1px #b9b9bb);
   filter: drop-shadow(0px -2px 1px #b9b9bb);
   top: -11px;
